--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout Source Repository
-        uses: actions/checkout@v3          
+        uses: actions/checkout@v2       
           
       - name: Set up SSH for Hugging Face
         uses: webfactory/ssh-agent@v0.5.3
@@ -27,13 +27,20 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan hf.co >> ~/.ssh/known_hosts
 
+      - name: Set up Git configuration
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          
       - name: Clone and Pull Target Hugging Face Repository
         run: |
           git clone git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git $RUNNER_TEMP/spaces/${{ matrix.space_name }}
 
       - name: Check Working directories
         run: |
-          ls -lR /home/runner/work/
+          ls -l /home/runner/work/
+          ls -lR $GITHUB_WORKSPACE/
+          ls -lR $RUNNER_TEMP/spaces
       
       - name: Sync Source Repository with Temporary Folder
         run: |
@@ -66,4 +73,5 @@ jobs:
         env:
           HF_ACCESS_TOKEN: ${{ secrets.HF_TOKEN }}  # Replace with your actual secret name
         run: |
-          git push git@hf.co:spaces/david-oplatka/${{ matrix.space_name }}.git
+          pwd
+          git push origin main
