--- a/.github/workflows/add_space.yaml
+++ b/.github/workflows/add_space.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        space_name: [company-pet-policy, about-mls, shakespeare] # List your Hugging Face space names here
+        space_name: [shakespeare, test] # List your Hugging Face space names here
 
     steps:
       - name: Checkout repository
