--- a/.github/workflows/update_space_2.yaml
+++ b/.github/workflows/update_space_2.yaml
@@ -23,6 +23,10 @@ jobs:
           - space_name: shakespeare
             space_title: "Shakespeare and His Plays"
             space_description: "Ask some basic questions about Shakespeare and his work"
+
+          - space_name: test
+            space_title: "Trivia Practice:"
+            space_description: "Practice your trivia skills with Jeopardy questions"
         
 
     steps:
